--- a/src/main/java/com/Infinity/Nexus/Mod/TODO.txt
+++ b/src/main/java/com/Infinity/Nexus/Mod/TODO.txt
@@ -1,2 +1,7 @@
 [V] Duplicação de minérios no Crusher
 [X] Mostrar a area de ação do MobCrusher
+[X] Consertar o fly da armadura
+[X] Algum sistema de craft magico ou mystico
+[X] Criar um mob para carda ORB
+[X] Arumar a animação dos mobs para nã ose sobrepor umas as outras
+[X] Fazer a paxel Funcionar como esperado
